fix logo on small screen

--- a/Arteg/wwwroot/assets/mobirise/css/mbr-additional.css
+++ b/Arteg/wwwroot/assets/mobirise/css/mbr-additional.css
@@ -3,6 +3,10 @@
 body {
     line-height: 1.5;
 }
+
+.card-image {
+    max-width: 100% !important
+}
 .mbr-section-title {
     font-style: normal;
     line-height: 1.2;
